--- a/GalaxyLD/src/main/resources/config.properties
+++ b/GalaxyLD/src/main/resources/config.properties
@@ -1,3 +1,6 @@
 #### Configuration properties
-API-key=<Your API Key> 
-URL=<Your Galaxy instance URL> 
+#API-key=d75134deaabcda270120e146b41672e4
+#URL=https://usegalaxy.org
+
+URL=https://galaxy-bird.univ-nantes.fr/galaxy/
+API-KEY=dd3b7fce727d53ac00512ea19a8f5d4f
